--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@nrwl/webpack-plugin-critical",
+  "name": "html-webpack-plugin-critical",
   "version": "1.0.0",
   "description": "Webpack plugin for the critical CSS inliner library.",
   "main": "index.js",
