--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "html-webpack-plugin-critical",
+  "name": "html-webpack-critical-plugin",
   "version": "1.0.0",
   "description": "Webpack plugin for the critical CSS inliner library.",
   "main": "index.js",
@@ -8,7 +8,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/nrwl/webpack-plugin-critical.git"
+    "url": "git+https://github.com/anthonygore/html-webpack-critical-plugin.git"
   },
   "keywords": [
     "webpack",
@@ -24,8 +24,7 @@
     "@types/jasmine": "^2.5.38",
     "@types/node": "^6.0.53",
     "jasmine": "^2.5.2",
-    "parse5": "^3.0.1",
-    "typescript": "^2.1.4"
+    "parse5": "^3.0.1"
   },
   "dependencies": {
     "critical": "^0.8.1",
