--- a/package.json
+++ b/package.json
@@ -18,10 +18,13 @@
   },
   "homepage": "https://github.com/anthonygore/html-critical-webpack-plugin#readme",
   "scripts": {
-    "build": "rimraf ./dist && webpack --config ./webpack.config.js"
+    "build": "rimraf ./dist && webpack --config ./webpack.config.js",
+    "test": "mocha ./test/**/*.spec.js"
   },
   "dependencies": {
-    "critical": "^1.0.0"
+    "critical": "^1.0.0",
+    "extract-text-webpack-plugin": "^3.0.2",
+    "html-webpack-plugin": "^2.30.1"
   },
   "files": [
     "README.md",
@@ -30,7 +33,10 @@
   "devDependencies": {
     "babel-loader": "^7.1.2",
     "babel-preset-env": "^1.6.0",
+    "css-loader": "^0.28.10",
+    "mocha": "^5.0.1",
     "rimraf": "^2.6.1",
+    "sinon": "^4.4.2",
     "webpack": "^3.5.5"
   }
 }
