--- a/package.json
+++ b/package.json
@@ -34,8 +34,9 @@
     "babel-loader": "^7.1.2",
     "babel-preset-env": "^1.6.0",
     "css-loader": "^0.28.10",
+    "jsdom": "^11.6.2",
     "mocha": "^5.0.1",
-    "rimraf": "^2.6.1",
+    "rimraf": "^2.6.2",
     "sinon": "^4.4.2",
     "webpack": "^3.5.5"
   }
