--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   "homepage": "https://github.com/anthonygore/html-critical-webpack-plugin#readme",
   "scripts": {
     "build": "rimraf ./dist && webpack --config ./webpack.config.js",
-    "test": "mocha ./test/**/*.spec.js"
+    "test": "rimraf ./test/cases/**/build/** && mocha ./test/**/*.spec.js"
   },
   "dependencies": {
     "critical": "^1.0.0"
@@ -32,11 +32,11 @@
     "babel-loader": "^7.1.2",
     "babel-preset-env": "^1.6.0",
     "css-loader": "^0.28.10",
-    "extract-text-webpack-plugin": "^3.0.2",
-    "html-webpack-plugin": "^2.30.1",
+    "extract-text-webpack-plugin": "^4.0.0-beta.0",
+    "html-webpack-plugin": "^3.0.6",
     "jsdom": "^11.6.2",
     "mocha": "^5.0.1",
     "rimraf": "^2.6.2",
-    "webpack": "^3.5.5"
+    "webpack": "^4.1.1"
   }
 }
