--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   "homepage": "https://github.com/anthonygore/html-critical-webpack-plugin#readme",
   "scripts": {
     "build": "rimraf ./dist && webpack --config ./webpack.config.js",
-    "test": "mocha ./test/**/*.spec.js"
+    "test": "rimraf ./test/cases/**/build/** && mocha ./test/**/*.spec.js"
   },
   "dependencies": {
     "critical": "^1.0.0"
@@ -37,6 +37,6 @@
     "jsdom": "^11.6.2",
     "mocha": "^5.0.1",
     "rimraf": "^2.6.2",
-    "webpack": "^3.5.5"
+    "webpack": "^4.1.1"
   }
 }
