--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "jsdom": "^11.6.2",
     "mocha": "^5.0.1",
     "rimraf": "^2.6.2",
-    "webpack": "^4.1.1"
+    "webpack": "^4.1.1",
+    "webpack-cli": "^2.0.11"
   }
 }
