--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   "homepage": "https://github.com/anthonygore/html-critical-webpack-plugin#readme",
   "scripts": {
     "build": "rimraf ./dist && webpack --config ./webpack.config.js",
-    "test": "mocha ./test/**/*.spec.js"
+    "test": "mocha ./test/**/*.spec.js --timeout 5000"
   },
   "dependencies": {
     "critical": "^1.0.0"
