--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,7 +2,7 @@ version: 2
 jobs:
   build:
     docker:
-      - image: circleci/node:6.13.1
+      - image: thegreenhouse/nodejs-dev
 
     working_directory: ~/repo
 
