upgrade webpack and use mini-css-extract-plugin instead of extract-text-webpack-plugin

--- a/package.json
+++ b/package.json
@@ -18,9 +18,10 @@
   },
   "homepage": "https://github.com/anthonygore/html-critical-webpack-plugin#readme",
   "scripts": {
-    "build": "rimraf ./dist && webpack --config ./webpack.config.js",
-    "ci": "webpack --config ./webpack.config.ci.js",
-    "test": "rimraf ./test/cases/**/build && mocha ./test/**/*.spec.js --timeout 5000"
+    "clean": "rimraf ./dist && rimraf ./test/cases/**/build",
+    "build": "npm run clean && webpack --config ./webpack.config.js",
+    "ci": "npm run clean && webpack --config ./webpack.config.ci.js",
+    "test": "npm run clean && mocha ./test/**/*.spec.js --timeout 5000"
   },
   "dependencies": {
     "critical": "^1.0.0"
@@ -33,12 +34,12 @@
     "babel-loader": "^7.1.2",
     "babel-preset-env": "^1.6.0",
     "css-loader": "^0.28.10",
-    "extract-text-webpack-plugin": "^4.0.0-beta.0",
-    "html-webpack-plugin": "^3.0.6",
+    "html-webpack-plugin": "^3.2.0",
     "jsdom": "^11.6.2",
+    "mini-css-extract-plugin": "^0.4.0",
     "mocha": "^5.0.1",
     "rimraf": "^2.6.2",
-    "webpack": "^4.1.1",
+    "webpack": "^4.8.2",
     "webpack-cli": "^2.0.11"
   }
 }
