add engines node to package.json

--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
     "type": "git",
     "url": "git+https://github.com/anthonygore/html-critical-webpack-plugin.git"
   },
+  "engines": {
+    "node": ">=6.0.0"
+  },
   "keywords": [
     "webpack",
     "critical"
