--- a/package.json
+++ b/package.json
@@ -28,8 +28,7 @@
     "test": "npm run clean && mocha ./test/**/*.spec.js --timeout 5000"
   },
   "dependencies": {
-    "critical": "^1.0.0",
-    "eslint": "^4.19.1"
+    "critical": "^1.0.0"
   },
   "files": [
     "README.md",
@@ -39,6 +38,7 @@
     "babel-loader": "^7.1.2",
     "babel-preset-env": "^1.6.0",
     "css-loader": "^0.28.10",
+    "eslint": "^4.19.1",
     "html-webpack-plugin": "^3.2.0",
     "jsdom": "^11.6.2",
     "mini-css-extract-plugin": "^0.4.0",
