--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "clean": "rimraf ./dist && rimraf ./test/cases/**/build",
     "build": "npm run clean && npm run lint && webpack --config ./webpack.config.js",
     "lint": "eslint *.js test/**/*.js",
-    "ci": "npm run clean && webpack --config ./webpack.config.ci.js",
+    "ci": "npm run clean && npm run lint && webpack --config ./webpack.config.ci.js",
     "test": "npm run clean && mocha ./test/**/*.spec.js --timeout 5000"
   },
   "dependencies": {
